--- a/meetings.html
+++ b/meetings.html
@@ -97,8 +97,8 @@ https://templatemo.com/tm-569-edu-meeting
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h6>Here are our upcoming meetings</h6>
-          <h2>Upcoming Meetings</h2>
+          <h6>Présentation de nos campus</h6>
+          <h2>Nos programme</h2>
         </div>
       </div>
     </div>
@@ -112,10 +112,10 @@ https://templatemo.com/tm-569-edu-meeting
             <div class="col-lg-12">
               <div class="filters">
                 <ul>
-                  <li data-filter="*"  class="active">All Meetings</li>
-                  <li data-filter=".soon">Soon</li>
-                  <li data-filter=".imp">Important</li>
-                  <li data-filter=".att">Attractive</li>
+                  <li data-filter="*"  class="active">AUM Libreville</li>
+                  <!-- <li data-filter=".soon">AUM Port-Gentil</li> -->
+                  <li data-filter=".imp">AUM Port-Gentil</li>
+                  <!-- <li data-filter=".att">Attractive</li> -->
                 </ul>
               </div>
             </div>
@@ -124,153 +124,166 @@ https://templatemo.com/tm-569-edu-meeting
                 <div class="col-lg-4 templatemo-item-col all soon">
                   <div class="meeting-item">
                     <div class="thumb">
-                      <div class="price">
+                      <!-- <div class="price">
                         <span>$14.00</span>
-                      </div>
+                      </div> -->
                       <a href="meeting-details.html"><img src="assets/images/meeting-01.jpg" alt=""></a>
                     </div>
                     <div class="down-content">
-                      <div class="date">
+                      <!-- <div class="date">
                         <h6>Nov <span>12</span></h6>
-                      </div>
-                      <a href="meeting-details.html"><h4>New Lecturers Meeting</h4></a>
-                      <p>Morbi in libero blandit lectus<br>cursus ullamcorper.</p>
+                      </div> -->
+                      <a href="meeting-details.html"><h4>MANAGEMENT DES FINANCES PUBLIQUES
+                        ET DE LA FISCALITÉ</h4></a>
+                      <p>Le master « Finances Publiques et Fiscalité » se veut une formation approfondie à la nouvelle gestion des
+                        finances publiques et à l’analyse des systèmes fiscaux</p>
                     </div>
                   </div>
                 </div>
                 <div class="col-lg-4 templatemo-item-col all imp">
                   <div class="meeting-item">
                     <div class="thumb">
-                      <div class="price">
+                      <!-- <div class="price">
                         <span>$22.00</span>
-                      </div>
+                      </div> -->
                       <a href="meeting-details.html"><img src="assets/images/meeting-02.jpg" alt=""></a>
                     </div>
                     <div class="down-content">
-                      <div class="date">
+                      <!-- <div class="date">
                         <h6>Nov <span>14</span></h6>
-                      </div>
-                      <a href="meeting-details.html"><h4>Online Teaching Techniques</h4></a>
-                      <p>Morbi in libero blandit lectus<br>cursus ullamcorper.</p>
+                      </div> -->
+                      <a href="meeting-details.html"><h4>MANAGEMENT DES ENTREPRISES ET GESTION DE PROJET</h4></a>
+                      <p>Ce programme a pour finalité professionnelle de préparer les étudiants à prendre en charge toutes les
+                        phases de la gestion de projet de la conception à sa mise en œuvre. L</p>
                     </div>
                   </div>
                 </div>
                 <div class="col-lg-4 templatemo-item-col all soon">
                   <div class="meeting-item">
                     <div class="thumb">
-                      <div class="price">
+                      <!-- <div class="price">
                         <span>$24.00</span>
-                      </div>
+                      </div> -->
                       <a href="meeting-details.html"><img src="assets/images/meeting-03.jpg" alt=""></a>
                     </div>
                     <div class="down-content">
-                      <div class="date">
+                      <!-- <div class="date">
                         <h6>Nov <span>16</span></h6>
-                      </div>
-                      <a href="meeting-details.html"><h4>Network Teaching Concept</h4></a>
-                      <p>Morbi in libero blandit lectus<br>cursus ullamcorper.</p>
+                      </div> -->
+                      <a href="meeting-details.html"><h4>FINANCES-ASSURANCE-BANQUE</h4></a>
+                      <p>Ce programme permet de préparer les apprenants à la maîtrise des techniques, méthodes et outils de la
+                        Banque, de l’Assurance,</p>
                     </div>
                   </div>
                 </div>
                 <div class="col-lg-4 templatemo-item-col all att">
                   <div class="meeting-item">
                     <div class="thumb">
-                      <div class="price">
+                      <!-- <div class="price">
                         <span>$32.00</span>
-                      </div>
+                      </div> -->
                       <a href="meeting-details.html"><img src="assets/images/meeting-04.jpg" alt=""></a>
                     </div>
                     <div class="down-content">
-                      <div class="date">
+                      <!-- <div class="date">
                         <h6>Nov <span>18</span></h6>
-                      </div>
-                      <a href="meeting-details.html"><h4>Online Teaching Tools</h4></a>
-                      <p>Morbi in libero blandit lectus<br>cursus ullamcorper.</p>
+                      </div> -->
+                      <a href="meeting-details.html"><h4>MARKETING ET COMMUNICATION DIGITALE</h4></a>
+                      <p>L’option Marketing et Communication Digitale a pour objectif principal de former des managers ayant une
+                        double compétence à la fois de marketing et de bon communicant qui seront les mieux à même d’appréhender
+                        les outils nécessaires à l’ère du digital .</p>
                     </div>
                   </div>
                 </div>
                 <div class="col-lg-4 templatemo-item-col all att">
                   <div class="meeting-item">
                     <div class="thumb">
-                      <div class="price">
+                      <!-- <div class="price">
                         <span>$34.00</span>
-                      </div>
+                      </div> -->
                       <a href="meeting-details.html"><img src="assets/images/meeting-02.jpg" alt=""></a>
                     </div>
                     <div class="down-content">
-                      <div class="date">
+                      <!-- <div class="date">
                         <h6>Nov <span>22</span></h6>
-                      </div>
-                      <a href="meeting-details.html"><h4>New Teaching Techniques</h4></a>
-                      <p>Morbi in libero blandit lectus<br>cursus ullamcorper.</p>
+                      </div> -->
+                      <a href="meeting-details.html"><h4>DROIT DES AFFAIRES ET FISCALITÉ DES ENTREPRISES</h4></a>
+                      <p>Le droit des affaires est l’une des branches du droit privé qui porte sur un ensemble de droits relatifs aux affaires
+                        des entreprises tels que le droit des contrats, la propriété intellectuelle, le droit des sociétés, la procédure
+                        commerciale, le droit fiscal, le droit pénal, le droit de la consommation.</p>
                     </div>
                   </div>
                 </div>
                 <div class="col-lg-4 templatemo-item-col all imp">
                   <div class="meeting-item">
                     <div class="thumb">
-                      <div class="price">
+                      <!-- <div class="price">
                         <span>$45.00</span>
-                      </div>
+                      </div> -->
                       <a href="meeting-details.html"><img src="assets/images/meeting-03.jpg" alt=""></a>
                     </div>
                     <div class="down-content">
-                      <div class="date">
+                      <!-- <div class="date">
                         <h6>Nov <span>24</span></h6>
-                      </div>
-                      <a href="meeting-details.html"><h4>Technology Conference</h4></a>
-                      <p>TemplateMo is the best website<br>when it comes to Free CSS.</p>
+                      </div> -->
+                      <a href="meeting-details.html"><h4>SUPPLY CHAIN MANAGEMENT</h4></a>
+                      <p>Le diplômé en Supply Chain Management sera capable de gérer l’ensemble des ressources, moyens, méthodes,
+                        outils et techniques destinés à piloter le plus efficacement possible la chaîne globale d’approvisionnement et
+                        de livraison d’un produit ou service jusqu’au consommateur final</p>
                     </div>
                   </div>
                 </div>
                 <div class="col-lg-4 templatemo-item-col all imp att">
                   <div class="meeting-item">
                     <div class="thumb">
-                      <div class="price">
+                      <!-- <div class="price">
                         <span>$52.00</span>
-                      </div>
+                      </div> -->
                       <a href="meeting-details.html"><img src="assets/images/meeting-01.jpg" alt=""></a>
                     </div>
                     <div class="down-content">
-                      <div class="date">
+                      <!-- <div class="date">
                         <h6>Nov <span>27</span></h6>
-                      </div>
-                      <a href="meeting-details.html"><h4>Online Teaching Techniques</h4></a>
-                      <p>Morbi in libero blandit lectus<br>cursus ullamcorper.</p>
+                      </div> -->
+                      <a href="meeting-details.html"><h4>COMPTABILITÉ-CONTRÔLE-AUDIT</h4></a>
+                      <p>Élargir sa formation de l’expertise comptable vers d’autres thématiques et réflexions de comptabilité
+                        approfondie.</p>
                     </div>
                   </div>
                 </div>
                 <div class="col-lg-4 templatemo-item-col all soon imp">
                   <div class="meeting-item">
                     <div class="thumb">
-                      <div class="price">
+                      <!-- <div class="price">
                         <span>$64.00</span>
-                      </div>
+                      </div> -->
                       <a href="meeting-details.html"><img src="assets/images/meeting-02.jpg" alt=""></a>
                     </div>
                     <div class="down-content">
-                      <div class="date">
+                      <!-- <div class="date">
                         <h6>Nov <span>28</span></h6>
-                      </div>
-                      <a href="meeting-details.html"><h4>Instant Lecture Design</h4></a>
-                      <p>Morbi in libero blandit lectus<br>cursus ullamcorper.</p>
+                      </div> -->
+                      <a href="meeting-details.html"><h4>MANAGEMENT DES RH ET E-RH</h4></a>
+                      <p>Nous formons des managers en ressources humaines dont le rôle est de définir et mettre en œuvre la politique
+                        de management et de gestion des ressources humaines .</p>
                     </div>
                   </div>
                 </div>
                 <div class="col-lg-4 templatemo-item-col all att soon">
                   <div class="meeting-item">
                     <div class="thumb">
-                      <div class="price">
+                      <!-- <div class="price">
                         <span>$74.00</span>
-                      </div>
+                      </div> -->
                       <a href="meeting-details.html"><img src="assets/images/meeting-03.jpg" alt=""></a>
                     </div>
                     <div class="down-content">
-                      <div class="date">
+                      <!-- <div class="date">
                         <h6>Nov <span>30</span></h6>
-                      </div>
-                      <a href="meeting-details.html"><h4>Online Social Networking</h4></a>
-                      <p>Morbi in libero blandit lectus<br>cursus ullamcorper.</p>
+                      </div> -->
+                      <a href="meeting-details.html"><h4>MARKETING INDUSTRIEL ET COMMUNICATION DIGITALE</h4></a>
+                      <p>A travers la formation proposée, « marketing industriel », les étudiants pourraient développer des profils
+                        structurés autour de compétences très prisées dans le domaine marketing et du management industriel.</p>
                     </div>
                   </div>
                 </div>
