--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@ https://templatemo.com/tm-569-edu-meeting
                   <nav class="main-nav">
                       <!-- ***** Logo Start ***** -->
                       <a href="index.html" class="logo">
-                          Edu Meeting
+                        <img src="assets/images/LogoAUM-2-07.png" alt="" style="height: 40px;">
                       </a>
                       <!-- ***** Logo End ***** -->
                       <!-- ***** Menu Start ***** -->
                       <ul class="nav">
-                          <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
-                          <li><a href="meetings.html">Meetings</a></li>
-                          <li class="scroll-to-section"><a href="#apply">Apply Now</a></li>
+                          <li class="scroll-to-section"><a href="#top" class="active">Acceuil</a></li>
+                          <!-- <li><a href="meetings.html">Meetings</a></li> -->
+                          <!-- <li class="scroll-to-section"><a href="#apply">Apply Now</a></li> -->
                           <li class="has-sub">
                               <a href="javascript:void(0)">Pages</a>
                               <ul class="sub-menu">
@@ -77,7 +77,7 @@ https://templatemo.com/tm-569-edu-meeting
                                   <li><a href="meeting-details.html">Meeting Details</a></li>
                               </ul>
                           </li>
-                          <li class="scroll-to-section"><a href="#courses">Courses</a></li> 
+                          <!-- <li class="scroll-to-section"><a href="#courses">Courses</a></li>  -->
                           <li class="scroll-to-section"><a href="#contact">Contact Us</a></li> 
                       </ul>        
                       <a class='menu-trigger'>
@@ -94,7 +94,7 @@ https://templatemo.com/tm-569-edu-meeting
   <!-- ***** Main Banner Area Start ***** -->
   <section class="section main-banner" id="top" data-section="section1">
       <video autoplay muted loop id="bg-video">
-          <source src="assets/images/course-video.mp4" type="video/mp4" />
+          <source src="assets/images/video_header.mp4" type="video/mp4" />
       </video>
 
       <div class="video-overlay header-text">
@@ -102,12 +102,12 @@ https://templatemo.com/tm-569-edu-meeting
             <div class="row">
               <div class="col-lg-12">
                 <div class="caption">
-              <h6>Hello Students</h6>
-              <h2>Welcome to Education</h2>
-              <p>This is an edu meeting HTML CSS template provided by <a rel="nofollow" href="https://templatemo.com/page/1" target="_blank">TemplateMo website</a>. This is a Bootstrap v5.1.3 layout. The video background is taken from Pexels website, a group of young people by <a rel="nofollow" href="https://www.pexels.com/@pressmaster" target="_blank">Pressmaster</a>.</p>
+              <!-- <h6>Hello Students</h6> -->
+              <h2>Bienvenue à l’African University Of<br> Management & Technologies</h2>
+              <p>African University of Management & Technologies (AUM) est l’émanation d’une ferme volonté de plusieurs professionnels et experts du monde de l’enseignement supérieur et de la recherche, à répondre à la forte demande en matière de formation supérieure professionnelle et diplômante au Gabon.</p>
               <div class="main-button-red">
-                  <div class="scroll-to-section"><a href="#contact">Join Us Now!</a></div>
-              </div>
+                <div class="scroll-to-section"><a href="#contact">Préinscription</a></div>
+            </div>
           </div>
               </div>
             </div>
@@ -178,7 +178,7 @@ https://templatemo.com/tm-569-edu-meeting
     </div>
   </section>
 
-  <section class="upcoming-meetings" id="meetings">
+  <!-- <section class="upcoming-meetings" id="meetings">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
@@ -275,7 +275,35 @@ https://templatemo.com/tm-569-edu-meeting
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
+ 
+
+<section class="events-slider">
+  <h2 style="color: #004e9b; text-align: center;">Événement</h2>
+    <div class="events-container">
+        <div class="event">
+            <img src="assets/images/IMG-20231104-WA0011.jpg" alt="Événement 1">
+            <h2 >Inauguration du salon culturel chinois du Gabon à AUM
+            </h2>
+            <p></p>
+        </div>
+        <div class="event">
+            <img src="assets/images/IMG-20231104-WA0018.jpg" alt="Événement 2">
+            <h2>Biotechnologie le Nouveau département</h2>
+            <p>Description de l'événement 2</p>
+        </div>
+        <div class="event">
+            <img src="assets/images/IMG-20231104-WA0021.jpg" alt="Événement 3">
+            <h2>Nouveau Campus : Bangui</h2>
+            <p>Description de l'événement 3</p>
+        </div>
+        <!-- Ajoutez d'autres événements ici -->
+    </div>
+</section>
+
+<script src="scripts.js"></script>
+
+
 
   <!-- <section class="apply-now" id="apply">
     <div class="container">
@@ -365,6 +393,7 @@ https://templatemo.com/tm-569-edu-meeting
     </div>
   </section> -->
   <div class="jesus" data-id="1712b1e" data-element_type="section "  data-settings="{&quot;stretch_section&quot;:&quot;section-stretched&quot;,&quot;background_background&quot;:&quot;classic&quot;,&quot;animation&quot;:&quot;lightSpeedIn&quot;}" >
+    <h2 style="color: #ffff; text-align: center; padding-bottom: 10%;">Nos chiffres</h2>
       <div class="elementor-background-overlay">
       <div class="elementor-container elementor-column-gap-default" style="display: flex; justify-content: space-around; align-items: center; text-align: center; gap: 20px; ">
   <div class="elementor-column elementor-col-20 elementor-top-column elementor-element elementor-element-67d8f88" data-id="67d8f88" data-element_type="column">
@@ -489,7 +518,7 @@ https://templatemo.com/tm-569-edu-meeting
       </div>
     </div>
 </div>
-  <section class="elementor-section elementor-top-section elementor-element elementor-element-4bb82b0 elementor-section-content-middle elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="4bb82b0" data-element_type="section" style="display: flex; flex-direction: row; margin:30px ; height: 500px; padding: 50px; background-color: rgb(252, 250, 250);">
+  <section class="elementor-section elementor-top-section elementor-element elementor-element-4bb82b0 elementor-section-content-middle elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="4bb82b0" data-element_type="section" style="display: flex; flex-direction: row; margin:30px ; height: 500px; padding: 50px; background-color: rgb(240, 236, 236);">
     <div class="elementor-container elementor-column-gap-default" style="display: flex; flex-direction: row; gap: 20px;">
   <div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-b4700cf" data-id="b4700cf" data-element_type="column" style="display: flex; flex-direction: row;">
 <div class="elementor-widget-wrap elementor-element-populated">
@@ -540,7 +569,7 @@ https://templatemo.com/tm-569-edu-meeting
           </div>
         </div>
       </div>
-      <div class="row wow fadeInUp" >
+      <div class="row wow fadeInUp" style="transition: transform 0.5s ease;">
         <!-- <div class="col-6 col-md-4 col-xl-2">
           <div class="partner_item text-center mb30-lg"><img id="E243" class="wa m-auto" src="assets/images/Plan-de-travail-1.png" alt=""></div>
         </div> -->
