--- a/meetings.html
+++ b/meetings.html
@@ -64,14 +64,14 @@ https://templatemo.com/tm-569-edu-meeting
                   <nav class="main-nav">
                       <!-- ***** Logo Start ***** -->
                       <a href="index.html" class="logo">
-                          Edu Meeting
+                        <img src="assets/images/LogoAUM-2-07.png" alt="" style="height: 40px;">
                       </a>
                       <!-- ***** Logo End ***** -->
                       <!-- ***** Menu Start ***** -->
                       <ul class="nav">
                           <li><a href="index.html">Home</a></li>
-                          <li><a href="meetings.html" class="active">Meetings</a></li>
-                          <li><a href="index.html">Apply Now</a></li>
+                          <!-- <li><a href="meetings.html" class="active">Meetings</a></li> -->
+                          <!-- <li><a href="index.html">Apply Now</a></li> -->
                           <li class="has-sub">
                               <a href="javascript:void(0)">Pages</a>
                               <ul class="sub-menu">
@@ -79,7 +79,7 @@ https://templatemo.com/tm-569-edu-meeting
                                   <li><a href="meeting-details.html">Meeting Details</a></li>
                               </ul>
                           </li>
-                          <li><a href="index.html">Courses</a></li> 
+                          <!-- <li><a href="index.html">Courses</a></li>  -->
                           <li><a href="index.html">Contact Us</a></li> 
                       </ul>        
                       <a class='menu-trigger'>
