--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@ https://templatemo.com/tm-569-edu-meeting
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-sm-8">
-          <div class="left-content">
+          <!-- <div class="left-content">
             <p>This is an educational <em>HTML CSS</em> template by TemplateMo website.</p>
-          </div>
+          </div> -->
         </div>
         <div class="col-lg-4 col-sm-4">
-          <div class="right-icons">
+          <!-- <div class="right-icons">
             <ul>
               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
               <li><a href="#"><i class="fa fa-behance"></i></a></li>
               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-            </ul>
+            </ul> -->
           </div>
         </div>
       </div>
@@ -937,7 +937,7 @@ https://templatemo.com/tm-569-edu-meeting
         <div class="col-lg-9 align-self-center">
           <div class="row">
             <div class="col-lg-12">
-              <form id="contact" action="" method="post">
+              <!--<form id="contact" action="" method="post">
                 <div class="row">
                   <div class="col-lg-12">
                     <h2>Let's get in touch</h2>
@@ -996,7 +996,227 @@ https://templatemo.com/tm-569-edu-meeting
         </div>
       </div>
     </div>
-    
+     -->
+     <form id="contact" action="" method="post">
+      <div class="row">
+        <div class="col-lg-12">
+          <h2>Formulaire d'inscription à l'université</h2>
+        </div>
+        <div class="col-lg-6">
+          <fieldset>
+            <input name="firstname" type="text" id="firstname" placeholder="Prénom..." required="">
+          </fieldset>
+        </div>
+        <div class="col-lg-6">
+          <fieldset>
+            <input name="lastname" type="text" id="lastname" placeholder="Nom de famille..." required="">
+          </fieldset>
+        </div>
+        <div class="col-lg-6">
+          <fieldset>
+            <input name="email" type="text" id="email" placeholder="Adresse email...">
+          </fieldset>
+        </div>
+        <div class="col-lg-6">
+          <fieldset>
+            <input name="phone" type="text" id="phone" placeholder="Numéro de téléphone...">
+          </fieldset>
+        </div>
+        <div class="col-lg-6">
+          <fieldset>
+            <input name="birthdate" type="date" id="birthdate" placeholder="Date de naissance...">
+          </fieldset>
+        </div>
+        <div class="col-lg-6">
+          <fieldset>
+            <select name="gender" id="gender" required>
+              <option value="">Genre...</option>
+              <option value="male">Masculin</option>
+              <option value="female">Féminin</option>
+              <option value="other">Autre</option>
+            </select>
+          </fieldset>
+        </div>
+        <div class="col-lg-6">
+          <fieldset>
+            <input name="nationality" type="text" id="nationality" placeholder="Nationalité...">
+          </fieldset>
+        </div>
+        <div class="col-lg-12">
+          <h2>Informations sur l'éducation précédente</h2>
+        </div>
+        <div class="col-lg-6">
+          <fieldset>
+            <input name="previous_school" type="text" id="previous_school" placeholder="Dernier établissement persistant...">
+          </fieldset>
+        </div>
+        <div class="col-lg-6">
+          <fieldset>
+            <input name="degrees" type="text" id="degrees" placeholder="Diplômes obtenus...">
+          </fieldset>
+        </div>
+        <div class="col-lg-6">
+          <fieldset>
+            <input name="previous_years" type="text" id="previous_years" placeholder="Années d'études antérieures..">
+          </fieldset>
+        </div>
+        <div class="col-lg-6">
+          <fieldset>
+            <input name="major" type="text" id="major" placeholder="Spécialisation ou domaine d'études...">
+          </fieldset>
+        </div>
+        <div class="col-lg-12">
+          <h2>Programme souhaité</h2>
+        </div>
+        <div class="col-lg-6">
+          <fieldset>
+            <input name="program_name" type="text" id="program_name" placeholder="Nom du programme ou du cursus d'interet...">
+          </fieldset>
+        </div>
+        <div class="col-lg-6">
+          <fieldset>
+            <select name="study_level" id="study_level" required>
+              <option value="">Niveau d'étude souhaité...</option>
+              <option value="licence">Licence</option>
+              <option value="master">Master</option>
+              <option value="doctorat">Doctorat</option>
+            </select>
+          </fieldset>
+        </div>
+        <div class="col-lg-6">
+          <fieldset>
+            <input name="major_interest" type="text" id="major_interest" placeholder="Domaine d'étude spécifique ou majeure envisagee...">
+          </fieldset>
+
+        </div>
+        <div class="col-lg-12">
+          <fieldset>
+            <button type="submit" id="form-submit" class="button">S'inscrire</button>
+          </fieldset>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
+</div>
+<div class="col-lg-3">
+<div class="right-info">
+
+  <ul>
+    <li>
+      <h6>Numéro de Téléphone</h6>
+      <span>(+241 ) 66 68 68 02</span>
+    </li>
+    <li>
+      <h6>Adress Mail</h6>
+      <span>info@aum-groupgabon.com</span>
+    </li>
+    <li>
+      <h6>Localisation</h6>
+      <span>Boulevard Léon MBA, BP : 16374 Libreville (GABON)</span>
+    </li>
+    <!-- <li> -->
+      <!-- <h6>Lien du site</h6> -->
+      <!-- <span><a href="https://aum-groupgabon.com/">https://aum-groupgabon.com/</a></span> -->
+    <!-- </li> -->
+  </ul>
+</div>
+</div>
+</div>
+</div>
+<div class="footer">
+  <footer style="background-color: #0657a7; color: white; padding: 20px;">
+    <div class="row">
+        <div class="col-lg-4">
+            <img src="assets/images/LogoAUM-2-07.png" 
+            alt="Logo de l'université" style="width:100px; height:100px;">
+            <p style="text-transform: lowercase;">Une université performante au service 
+              du développement économique, social et culturel en restant enracinée dans 
+              les systèmes de valeurs qui fondent la Nation gabonaise.</p>
+            <div style="margin-top: 20px;">
+                <a href="https://www.facebook.com/AUMGroup.Officiel"><img 
+                  src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAMAAAAJbSJIAAA
+                  Ak1BMVEUYd/L///8QdfJFiPMAbvEAcvINdPK/2PtXlvXt9P4AcPG+1vvR3vvx9/4AbfGQuPhFkfQAafH
+                  c6/32+/6z0fvl7v1IjvRSkfS3z/o1hfNMlfWsy/offfNcmfV+rfdYlfXW5fycwPlupPalxvqYwPl0q/
+                  ZenvaCq/Yif/OTt/hvo/aTtfeGtvjU4fwohfPP5Pxsn/Uzhx6MAAALJklEQVR4nO3dW2OiOhAA4JAl
+                  cY3gBZBqBa/Vulv29Pz/X3dA24rKJclkiLtn52VfttavkAthMiEObvj9YO3tRvvDeEzKMR4f9qOdt
+                  w76PvI3IIifHUSb1zQ+MlcIxim9ElLKmRAuO8bp6yYKEL8FjtCfetmBEM7vZLdRSDkn5DnzpjhXE
+                  0E4jd5S4gpOmm1XTsKFm6Rvs6n5r2NYGK5f4iPJr5w0rsTkjBzjlyA0+5VMCsPej7HatbsPLobjH
+                  z2TSHPCIHtKch48uEieMnN9jyFhMCuuHuTilYPmrXI8M4Q0IgyWc2bi6pWDs/nSiBEu7A+eJ8zU
+                  1SsHZZPnQd++cLHKu0CsYHy1sCvsRwk31vqqgnKeRLDrCBGGi1hg8j6QIl5ARg99YTiIuenupTo
+                  4jwf6Rm1hL3W78Z2MbtrrWNhfJt35TsZkqdkctYThgnfQAK+DCq7XHHWEwapr3gdypTMFUBf6I
+                  4EywEsImRipP0MqC9dp5zdoySjSNbIw3HQ0QtQF5xvF1qgmDLauvQt4Dupu1VqjkrDX8RBRHTx
+                  RGhtVhKOWVaWugtIRitDfWupC74OyrXyfKi18j4VtWClE/G5a6M0foQlegs89s8Ldw9yhn0HZz
+                  qTw8YDyRCnh3uI0pj6o2BsShtnQNqYmhpnE/KZdGKaP1ceUg6ftxFahf3ikUeI2xKF1YGwThge
+                  8tUITwQ5tV7FFGKaPfAWLEG03aoswe9w2+Bk8gwj3j9qLlmPYPGg0CnePfoueQzQO/U3CR5zJVEXz
+                  7KZB6P0mwILYMA2vF77PfxdgTpzXP0zVCv348bvRS/C4duSvFW6762Uo5ZegekslYqsqHHUzlaFMu
+                  CyZf/+ebl9f0+/5v8ckcfMQTFHK6tZuaoS9DhadOBtOjtuF92sd9E/ZbX4/j/V67XmDWbb/h04mQ1
+                  dwyf6O0poVuGphkGADuXtMs7a1lvA9yn7+K9nj0aR6HbVSGG5xe5kiB2H3q4X3FTNX7lP5tnKGWin
+                  cSH6mpk+o5ZH8kv027kZWuMZMPqCMjNSW5T1ZIeVVr20qhH6K2I9yovjaQUFIWFoxKlYIR4gjoYgHi
+                  j4VIREVQ8a9MMBbWKNCYTVeR0jF/Q1yJwxXaPcoTbQSnBSEhK3u+tM74QJtrOcT5fe3ykJK7/6It8I+
+                  2kjIY80UZxVh/mtuk1JuhUusboYfdXO41YRi2SzsYU3X6FHvFlUW0ts3xNdCtPVtStVHCT3h3Tr4tXC
+                  ANV1rXiwyKiTu9R/zShhiLVywn/pAZSGPry7ilXCB1Qjn2o1QQ0j41YhRFvaxlmaGoFRmdWFcHjHKwghppGBj
+                  CFBdSERUI0QaKSiRTSowJaRJtXCBdI/yf0FADeFVS7wI+yusVgjpZjSFq0tLvAgHSE/2PIYBdYSUX8bEi/AZ6an
+                  J1Z/NaAsJe74XBhPzuCKo7iMFSEgmX4/CX8Il0iVkr0CgnpB9PWJ8CgOsCVvdUjSykM4/L+KncIZ0CSmFAvWEhM
+                  1uhGOkoYIdLAn550TqQxhgPTa5Ue03r4vwJnp6380NroQZ1uJFxfJeffjTaBvff4ZeDyGysjB8wnq2/ya/W6m/Sbmb
+                  Tzvobej9av4UloRoyzM174OqYjM3u1nzc8HmLPyBdpP+kPRNU+M7OT6W+E/CEKsnJVxyfcafmx+t+Dj8EgZYyV2UyHW
+                  l0xhjOB4GX8IXrJuUJnKbBnBSPMXLlxAvdUZuoXuBM+s/P7cVwukR5ReQYnYo05X6MVJPfvr7FsIZzucTWSHW8sm5Fy
+                  iEb3hvDL9JAMOfWI2EvZ2FPl4yvpSwDypo0xS8eK+fC6dov0FOuEZLRKZkehLqPZ3I/QoZIWImsuudhGjPFZJCxP0Ox
+                  fNFLnzGS/GSEmKt0+bBDych2udLCr9hZgkWwgCvo7EupCTIhRFiHqJtIeFRLtz80cJNLnxFzNOzLmSvDkGc0TyAMJ/
+                  VkD7WxL4I60Ia90lw/KOFx4CsMbcdWBcStiaIs9JHELoeQd2BZ18odgQz5/kRhCOy/8Pb4Z4cMDeP2BfyAxmjFna0Lq
+                  Tj/4EQNewLseOv8K/w8eMPETK3NoZzCeF8WP8BeTyAf9RrCAlh04/nYamU6CUoAad1NQfaext5ITS7sjlQV1keQhhY
+                  74iwhR76xnnbQtm96r+vcAF+Qoc+W2ALgbnLBp6esIXAdK1cCH3GxxYC34zlz/jQdRpkoQ9MJmJ78FobshCacidG4P
+                  VSZCG0KxU78Jo3shC6DcT1wO8tkIXQNAa2Br97emxh8e4J+v4QVzgFzruL94fQpxNcIXTeXbwDhr7HxxXOoM3wFZ
+                  6LgSuEjmWnXAxgPg2uEDofOeXTAHOiUIXQOh3nnChgXhuq0P8H+oB/ytyDPV2gCvvAefdHbiIsvxRVCJ53ZwZyh
+                  FGFC+Ck+SNHGJbnjSqELmF85HnDZjWoQuCs9DNXH7bfAlUI3GD+ud/CiSC3KabQhwkve2ZA+54whdB599e+J9
+                  DeNUxhBPKV9q6B9h/mt8Kp/m9NSDhqf9Z/g81KS/sPYQPrt++1sZKp8fVzVffjcxCwvIcUtg+4XI37JpjUW25
+                  W9+MwYHkfMNpebquZCuW93Gj78W0Kr/fjY9VUsCm8rqmAtX/NpvC6LgZWbRObQnd6JUSqT2NReFufBqnGkEXh
+                  XY0hnDpR9oT3daJwan3ZE97X+sKp12ZPWFGvDaXmnjVhVc09lLqJtoTVdRMxal/aElbXvsQowGFNWFm/FKMGr
+                  SVhXQ1ahDrCloS1dYTN14K2I6yvBW2+JVoS1tbzdkLTF9GKsKkmu/G6+laETXX1jZ+NYEPYfDaC6QUbC8KW8y
+                  1Mn1FiQdh2Ronhc2YsCFvPmTF7VlDnQomzgsye99S5UOa8J6NndnUtlDqzy+i5a10L5c5dM3l2XsdC2bPzDJ5
+                  /2K1Q+vxDg2dYdiuUP8PS3DmknQpVziE1dpZsl0Kls2SNnQfcoVDxPGBTZzp3KFQ909nQudzdCdXP5TZztnpn
+                  Qp2z1Z13A2+juhLSeX3d8Hqh40me+W1fSFnDqWANQmcHJnYjpKypen+TEF7htxth8/GRjUJnD8yz7kQ43Dd+fLP
+                  QyYD7HToQ8qz541uEYQpL5McXirSlsH2L0AlBtajxhezQVrm/Tej4B0jyKbZQHFqPMm8VgtbBsYW369t6QifMtH
+                  tUZOEwkzhcQkKYDxq6y2+oQiqahwkVofbsBlPYPJNRFeoSEYWyQFmh4811+hs8IZ/LHsErK3TeY41RA00oYrlj
+                  llSEjr9Vv1ORhJRtW4dBDaHjjJSXp3CElNatyUCFTi9RbIwoQn77lteg0Am2amUMEYTU3aocGqkqdMKN0k4W80
+                  LON9InKmoJHWedKkxwTAupSJUP+VYWOv5ISHeqZoWUiZF8H6ovzFujdMFNw8KVWgs8h47QCRdc7lY1KKSCLxRb
+                  4Dm0hI7TX0oNHOaEPFnKn0p7FZrCfGxM3XajKSF3U+06sNpCJxzErSOHGSHn8UDrBj2FvrBojnFLczQhpCLWa
+                  4AfARHmzTFKGo8pBgsp50mk2QA/AibMY7Hi9euNUCHjq7ssLtUAC53+4HlSd7OChJRNngew61cEXJhHkM1ZZa
+                  cDEHI2X+oM8HdhRJgbZ2NX3LdITSHlwh3PjPiMCfOYZk+J4AaEXCRPmdRJyVJhTpiPHt5mPMyRVFtIc95wvPE
+                  go8NtmBTmEQYv8THvAqmGkOad8jF+CUzyHOPCIqbRW0rc07WUFRbXziXpW2Tu5vwKBGEe/tTLDkWLkqqLUbTe
+                  Q+ZN1Z/9ZAJHeI4gGr1J/Le3UWSo26wMTOFjxH+888JHButC3gAAAABJRU5ErkJggg==" alt="Facebook" 
+                  style="width:30px; height:30px; margin-right: 10px;"></a>
+                <a href="https://www.tiktok.com/@aumgabon?_t=8h35g1VxONN&_r=1"><img 
+                  src="https://play-lh.googleusercontent.com/BmUViDVOKNJe0GYJe22hsr7juFndRVbvr1fGmHGXq
+                  HfJjNAXjd26bfuGRQpVrpJ6YbA=w240-h480-rw" alt="Tiktok" style="width:30px; height:30px; 
+                  margin-right: 10px;"></a>
+                <a href="https://www.instagram.com/aumgabon/"><img 
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Instagram_logo_
+                  2022.svg/langfr-220px-Instagram_logo_2022.svg.png" alt="Instagram" style="width:
+                  30px; height:30px; margin-right: 10px;"></a>
+                <a href="https://www.linkedin.com/company/aum-gabon/"><img src="https://play-lh.
+                  googleusercontent.com/kMofEFLjobZy_bCuaiDogzBcUT-dz3BBbOrIEjJ-hqOabjK8ieuevGe6
+                  wlTD15QzOqw" alt="LinkedIn" style="width:30px; height:30px;"></a>
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <h3>Adresse</h3>
+            <p>Boulevard Léon MBA, BP : 16374 Libreville (GABON)</p>
+            <h3>Contact</h3>
+            <p>(+241) 66 68 68 02</p>
+            <h3>Email</h3>
+            <p>info@aum-groupgabon.com</p>
+            <h3>Heures de cours</h3>
+            <p>08h30 - 16h30</p>
+        </div>
+        <div class="col-lg-4">
+            <h3>Campus</h3>
+            <p>Libreville</p>
+            <p>Port-Gentil</p>
+        </div>
+    </div>
+</footer>
+     
   <!-- Scripts -->
   <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
